# structai

./: .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  Makefile  PLAN.md  README.md  alembic.ini  biome.json  conftest.py  docker-compose.yml  initial-idea.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
apps/api/: pyproject.toml
apps/api/src/structai_api/: __init__.py  deps.py  export_openapi.py  main.py  stream.py
apps/api/src/structai_api/routes/: files.py  jobs.py  pipelines.py  runs.py  schemas.py  sessions.py  tables.py
apps/worker/: pyproject.toml
apps/worker/src/structai_worker/: __init__.py  lease.py  main.py  tasks.py  tasks_profile.py
backend/: pyproject.toml
backend/migrations/: 001_init.sql  002_core_tables.sql  003_phase2_columns.sql  004_clarifications.sql  005_schema_layouts.sql  006_settings.sql  007_schema_proposals.sql  008_chat.sql
backend/src/structai/: auth.py  cli.py  logging.py  main.py  settings.py
backend/src/structai/agent/: chat.py  client.py  decide.py  events.py  prompts.py
backend/src/structai/api/: auth.py  chat.py  dev.py  documents.py  errors.py  projects.py  runs.py  schema.py  settings.py  snapshots.py  tables.py
backend/src/structai/db/: chat_repo.py  clarifications_repo.py  health.py  ids.py  migrate.py  pool.py  pools.py  runs_repo.py  schema_intro.py  schema_proposals_repo.py  settings_repo.py  snapshots.py
backend/src/structai/pipeline/: execute.py  fix.py  generate.py  orchestrator.py  profile.py  propose_schema.py  validate.py
backend/src/structai/schemas/: chat.py  document.py  project.py  run.py  schema_diagram.py  settings.py  table.py
backend/src/structai/worker/: main.py  sweeper.py
backend/src/structai/workspace/: storage.py
backend/tests/: conftest.py  test_auth.py  test_cancel.py  test_chat.py  test_clarifications.py  test_delete.py  test_documents.py  test_execute.py  test_healthz.py  test_profile.py  test_profile_xlsx.py  test_projects.py  test_schema.py  test_settings.py  test_snapshot_naming.py  test_snapshots.py  test_tables_filters.py  test_undo.py
deploy/: Caddyfile.snippet  README.md  bootstrap.sh  deploy.sh  provision-db.sh  structai.env.example
designs/: package-lock.json  package.json
designs-archive/: index.html
docs/: architecture.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
plans/: gpt-5.5-plan-review-2.md  gpt-5.5-plan-review-3.md  gpt-5.5-plan-review.md  initial-idea  plan.md
samples/: orders_messy.csv  people.csv  people.tsv  sales_denormalized.csv  shop.json  shop.xlsx
tests/: test_config.py
(+96 files in other folders)
