[project]
name = "structai-worker"
version = "0.0.0"
description = "StructAI worker. Polls the Postgres job queue (plans/plan.md §3, §4)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structai-core",
]

[tool.uv.sources]
structai-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structai_worker"]
